@@ -125,7 +125,7 @@ struct oci8_base_class {
 struct oci8_bind_class {
     oci8_base_class_t base;
     VALUE (*get)(oci8_bind_t *obind, void *data, void *null_struct);
-    void (*set)(oci8_bind_t *obind, void *data, void *null_struct, VALUE val);
+    void (*set)(oci8_bind_t *obind, void *data, void **null_structp, VALUE val);
     void (*init)(oci8_bind_t *obind, VALUE svc, VALUE *val, VALUE length);
     void (*init_elem)(oci8_bind_t *obind, VALUE svc);
     ub1 (*in)(oci8_bind_t *obind, ub4 idx, ub1 piece, void **valuepp, ub4 **alenpp, void **indpp);
